--- a/conf/PermissionService-dev.properties
+++ b/conf/PermissionService-dev.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.data.mongodb.uri=mongodb\://16.187.145.11\:27017/dashboard
 
-spring.application.name=account-service
+spring.application.name=permission-service
 eureka.client.serviceUrl.defaultZone=http://16.187.145.11:8500/eureka/
 
 eureka.instance.preferIpAddress=true
